# quant-binance

./: .gitignore  Cargo.toml  README.md  ddl.sql
src/: main.rs
src/binance/: agg_trade.rs  liquidation.rs  mod.rs  order_book.rs  websocket.rs
src/cex/: combined_order_book.rs  mod.rs
src/cex/binance/: agg_trade.rs  order_book.rs  websocket.rs
src/cex/bitget/: mod.rs  order_book.rs  websocket.rs
src/database/: agg_trade.rs  liquidation.rs  mod.rs  order_book.rs  postgres.rs
