[package]
name = "data-modules-ts-binance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio-postgres = "0.7.12"
chrono = "0.4.39"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
clap = "4.5.23"
log = "0.4.22"
env_logger = "0.11.6"
